Left navigation styles ported from uu.projectsite

--- a/upiq/qits/browser/resources/css/qits.css
+++ b/upiq/qits/browser/resources/css/qits.css
@@ -1,2 +1,202 @@
 /* QI TeamSpace Plone 5 styles */
 
+/* toolbar style mods */
+
+#edit-zone nav > ul a > span:before {
+  color:#adf;
+}
+
+body.portaltype-collective-teamwork-project .icon-local_roles:before,
+body.portaltype-collective-teamwork-team .icon-local_roles:before,
+body.portaltype-collective-teamwork-workspace .icon-local_roles:before {
+  content:'\e804';
+  color:white !Important;
+  text-shadow: 3px 2px 4px #8cf;
+}
+
+/* toolbar scrollbar */
+
+#edit-zone nav > ul .scroll-btn {
+  background-color:#456;
+  text-shadow:4px 2px 3px black;
+}
+
+/* personal tools look awful for long email address based usernames, fix: */
+#personal-bar-container {
+  width:100% !important;
+}
+
+#portal-personaltools {
+  background-color:darkslategray;
+}
+
+#portal-personaltools > a > span:nth-child(2):before {
+  content:"My... ";
+  font-size:140%;
+}
+
+#portal-personaltools > a > span:nth-child(2) {
+  width:50px;
+}
+
+#edit-zone nav #portal-personaltools.active ul {
+  width:300px !important;
+}
+
+#edit-zone nav #portal-personaltools.active ul  > li {
+  width:100%;
+  max-width: 100%;
+}
+
+#portal-personaltools .plone-toolbar-submenu-header {
+  font-size:85%;
+  word-break: break-word;
+}
+
+/* navigation portlet styles */
+
+#portal-column-one .navTree {
+  margin-top:0.6em;
+}
+
+#portal-column-one .navTree.navTreeLevel0 {
+  margin-top:0;
+}
+
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree.navTreeLevel0 li.navTreeTopNode {
+  margin-left:-0.1em;
+}
+
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree.navTreeLevel0 li.navTreeTopNode.navTreeCurrentNode {
+  margin-left:-0.2em;
+}
+
+#portal-column-one .navTree.navTreeLevel1 {
+  margin-left:-1em;
+  margin-bottom:-0.6em;
+  border-left:0.5em solid #e9e9e9;
+}
+
+#portal-column-one .navTree.navTreeLevel1 .navTreeItem {
+  margin-left:-0.4em;
+  border-bottom:0.4em solid white;
+  border-top:0.3em solid white;
+}
+
+#portal-column-one .navTree.navTreeLevel1 > li.navTreeItem {
+  margin-left:0.25em;
+}
+
+#portal-column-one .navTree.navTreeLevel1 > li.navTreeItem .navTreeItem {
+  margin-left:-0.25em;
+}
+
+#portal-column-one .navTree.navTreeLevel1 li.navTreeItem .navTreeItem.navTreeCurrentNode {
+  margin-left:-0.9em;
+  margin-bottom:0.65em;
+}
+
+#portal-column-one .navTree.navTreeLevel1 > .navTreeItem.navTreeCurrentNode {
+  margin-left:-0.4em !important;
+}
+
+#portal-column-one .navTree.navTreeLevel1 .navTreeItem a {
+  border-left-width:0.5em;
+}
+
+#portal-column-one .navTree .navTreeItem {
+  border-bottom:0.2em solid white;
+}
+
+#portal-column-one .navTree .navTreeItem a {
+  margin-right:-1em;
+  padding-left:23px !Important;
+}
+
+#portal-column-one .navTree .navTreeItem a img {
+  margin-left:-18px;
+}
+
+.portlet dd.portletItem {
+  overflow-x:hidden;
+}
+
+dl.portletNavigationTree dd.portletItem ul.navTree li {
+  border:none;
+}
+
+dl.portletNavigationTree dd.portletItem ul.navTree li.navTreeCurrentNode {
+  margin-left:-0.2em;
+  border-left:0.5em solid SteelBlue;
+  border-bottom:none !important;
+  border-top:none !important;
+  padding-left:1.1em;
+}
+
+dl.portletNavigationTree dd.portletItem ul.navTree li.navTreeCurrentNode > a {
+  margin-top:-0.2em !important;
+
+}
+
+#portal-column-one .portletNavigationTree {
+  margin-top:0em;
+}
+
+/* color coded left-border, based on access */
+#portal-column-one .navTree .navTreeItem a {
+  border-left:0.5em solid #cccccc;
+  padding:0.25em 0.4em;
+  margin-right:0.2em;
+}
+
+#portal-column-one .navTree .navTreeItem .state-visible {
+  border-left:0.5em solid #ccffcc;
+}
+
+#portal-column-one .navTree .navTreeItem .state-published {
+  border-left:0.5em solid #ccccff;
+}
+
+#portal-column-one .navTree .navTreeItem .state-restricted,
+#portal-column-one .navTree .navTreeItem .state-private
+{
+  border-left:0.5em solid #ffcccc;
+}
+
+#portal-column-one .navTree .navTreeItem .state-restricted span,
+#portal-column-one .navTree .navTreeItem .state-private span {
+  color:#888 !important;
+}
+
+#portal-column-one .navTree .navTreeItem .contenttype-collective-teamwork-team.state-visible,
+#portal-column-one .navTree .navTreeItem .contenttype-collective-teamwork-workspace.state-visible {
+  border-left:0.5em solid #eeccaa;
+}
+
+#portal-column-one .portletNavigationTree .portletItem .navTreeItem a,
+#portal-column-one .portletNavigationTree .portletItem .navTreeItem a span {
+  color:black;
+  font-size:100%;
+  font-family:Arial Narrow, Arial;
+}
+
+#portal-column-one .portletNavigationTree .portletItem .navTreeItem a span {
+  padding-left:0.2em;
+}
+
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree li.navTreeCurrentNode a.navTreeCurrentItem,
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree li.navTreeTopNode a {
+  font-size:94%;
+  font-weight:bold;
+  min-height:2.35em;
+  margin:-0.3em -1.2em;
+}
+
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree li.navTreeCurrentNode a.navTreeCurrentItem {
+  background-color:LightSteelBlue;
+  border:none;
+}
+
+#portal-column-one dl.portletNavigationTree dd.portletItem ul.navTree .navTreeItem a img {
+  padding-right:2px;
+}
