--- a/upiq/qits/browser/resources/css/qits.css
+++ b/upiq/qits/browser/resources/css/qits.css
@@ -207,7 +207,7 @@ body#visual-portal-wrapper.pat-plone #edit-zone .contenttype-wildcardaudio::afte
   background-image: url(../../++resource++upiq.qits/images/video.png);
   background-repeat: no-repeat !important;
   width:20px !important;
-  content:' ';
+  content:' ' !important;
 }
 
 body#visual-portal-wrapper.pat-plone #edit-zone .contenttype-wildcardaudio::after,
