--- a/upiq/qits/browser/resources/css/qits.css
+++ b/upiq/qits/browser/resources/css/qits.css
@@ -208,6 +208,7 @@ body#visual-portal-wrapper.pat-plone #edit-zone .contenttype-wildcardaudio::afte
   background-repeat: no-repeat !important;
   width:20px !important;
   content:' ' !important;
+  margin-left: 0.2em !important;
 }
 
 body#visual-portal-wrapper.pat-plone #edit-zone .contenttype-wildcardaudio::after,
