--- a/upiq/qits/browser/resources/css/qits.css
+++ b/upiq/qits/browser/resources/css/qits.css
@@ -1,5 +1,26 @@
 /* QI TeamSpace Plone 5 styles */
 
+/* breadcrumbs */
+
+#portal-breadcrumbs {
+  background:linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(200,204,204,1.0) 100%);
+  border-bottom:1px solid darkgray;
+  box-shadow:4px 4px 4px gray;
+  text-align:center;
+}
+
+.plone-breadcrumb ol > li + li::after,
+.plone-breadcrumb ol > li + li::before {
+  content:"//" !important;
+  border-left:none !important;
+  border-top:none !important;
+  border-bottom:none !important;
+  margin-top:15px !important;
+  color:#aaa !important;
+}
+
+
+
 /* general icon positioning for all packages using CSS background images
  * for some of their types
  */
